--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Roboto', cursive;
 }
 
 body {
